# chess-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  heroku.yml
backend/: CMakeLists.txt
backend/include/: bitboard.h  evaluate.h  gamestate.h  move_generation.h  move_pick.h  transposition_table.h
backend/src/: bitboard.cpp  evaluate.cpp  gamestate.cpp  main.cpp  move_generation.cpp  move_pick.cpp  transposition_table.cpp
enc_temp_folder/d518c2c47437d77c7cdac542eef5745c/: main.cpp
enc_temp_folder/d5a968f1bbd3ed93cb3774b0566958b4/: move_pick.cpp
frontend/scripts/: chessBoard.js  game.js  player.js  singleplayer.js  zobristTable.js
frontend/styles/: main.css
